--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
