--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "redaxios": "^0.5.1",
     "sweetalert2": "^11.12.3",
     "sweetalert2-react-content": "^5.0.7",
